@@ -6,7 +6,9 @@ import java.io.IOException;
 import java.util.Scanner;
 
 public class ValaisonJDBC {
-    private static final String URL = "jdbc:mysql://localhost:3306/valaison";
+    // Correction : Configuration pour Oracle
+    //faut mettre l'URL du client Adminer comme çà on pourra s'y connecter
+    private static final String URL = "jdbc:oracle:oracle-1";
     private static final String USER = "marahm";
     private static final String PASSWORD = "marahm";
 
@@ -14,11 +16,13 @@ public class ValaisonJDBC {
 
     public static void main(String[] args) {
         try {
-            Class.forName("com.mysql.cj.jdbc.Driver");
+            // Correction : Driver Oracle
+            Class.forName("oracle.jdbc.driver.OracleDriver");
             conn = DriverManager.getConnection(URL, USER, PASSWORD);
-            System.out.println(" Connecté à la base de données.");
+            System.out.println("Connecté à la base de données.");
 
-            initialiserBase("Tables.sql");
+            // Correction : Chemin complet vers le fichier DDL
+            initialiserBase("C:\\Users\\taham\\IdeaProjects\\valaison\\src\\main\\java\\database\\DAO\\Tables.sql");
 
             menuPrincipal();
 
@@ -28,20 +32,27 @@ public class ValaisonJDBC {
         }
     }
 
-    // ️ Lecture et exécution du script SQL
+    // Lecture et exécution du script SQL
     private static void initialiserBase(String cheminFichier) {
         try (Statement stmt = conn.createStatement()) {
-            String contenu = Files.readString(Path.of(cheminFichier));
+            String contenu = Files.readString(Paths.get(cheminFichier)); // Correction : Paths.get() au lieu de Path.of()
             String[] requetes = contenu.split(";");
             for (String requete : requetes) {
                 requete = requete.trim();
                 if (!requete.isEmpty()) {
-                    stmt.execute(requete);
+                    try {
+                        stmt.execute(requete);
+                    } catch (SQLException e) {
+                        // Ignorer les erreurs de type "table already exists"
+                        if (!e.getMessage().contains("already exists")) {
+                            throw e;
+                        }
+                    }
                 }
             }
-            System.out.println("Tables créer succès !");
+            System.out.println("Tables créées avec succès !");
         } catch (SQLException | IOException e) {
-            System.err.println("Erreur lors de l’exécution du script SQL : " + e.getMessage());
+            System.err.println("Erreur lors de l'exécution du script SQL : " + e.getMessage());
         }
     }
 
@@ -66,10 +77,12 @@ public class ValaisonJDBC {
                 case 2 -> passerCommande(scanner);
                 case 3 -> consulterAlertes();
                 case 4 -> cloturerCommande(scanner);
-                case 0 -> System.out.println(" Au revoir !");
-                default -> System.out.println(" Choix invalide.");
+                case 0 -> System.out.println("Au revoir !");
+                default -> System.out.println("Choix invalide.");
             }
         } while (choix != 0);
+
+        scanner.close();
     }
 
     // Consultation du catalogue
@@ -79,9 +92,11 @@ public class ValaisonJDBC {
              ResultSet rs = stmt.executeQuery(sql)) {
             System.out.println("\n--- Catalogue ---");
             while (rs.next()) {
-                System.out.printf("",
-                        rs.getInt(), rs.getString(),
-                        rs.getDouble(), rs.getInt());
+                System.out.printf("ID: %d, Nom: %s, Prix: %.2f, Stock: %d\n",
+                        rs.getInt("id"),
+                        rs.getString("nom"),
+                        rs.getDouble("prix"),
+                        rs.getInt("stock"));
             }
         } catch (SQLException e) {
             System.err.println("Erreur lors de la consultation du catalogue : " + e.getMessage());
@@ -91,7 +106,7 @@ public class ValaisonJDBC {
     // Passer une commande
     private static void passerCommande(Scanner scanner) {
         try {
-            System.out.print("Entrez l’ID du produit : ");
+            System.out.print("Entrez l'ID du produit : ");
             int id = scanner.nextInt();
             System.out.print("Quantité : ");
             int qte = scanner.nextInt();
@@ -108,7 +123,7 @@ public class ValaisonJDBC {
                 pstmt.setString(3, paiement);
                 pstmt.setString(4, recup);
                 pstmt.executeUpdate();
-                System.out.println(" Commande enregistrée !");
+                System.out.println("Commande enregistrée !");
             }
         } catch (SQLException e) {
             System.err.println("Erreur lors de la commande : " + e.getMessage());
@@ -117,14 +132,16 @@ public class ValaisonJDBC {
 
     // Alertes de péremption
     private static void consulterAlertes() {
-        String sql = "SELECT nom, date_peremption FROM produits WHERE date_peremption < NOW() + INTERVAL 7 DAY";
+        // Correction : Syntaxe Oracle pour les dates
+        String sql = "SELECT nom, date_peremption FROM produits WHERE date_peremption < SYSDATE + 7";
         try (Statement stmt = conn.createStatement();
              ResultSet rs = stmt.executeQuery(sql)) {
             System.out.println("\n--- Produits proches de la péremption ---");
             boolean vide = true;
             while (rs.next()) {
-                System.out.printf(" %s — périme le %s\n",
-                        rs.getString("nom"), rs.getDate("date_peremption"));
+                System.out.printf("%s — périme le %s\n",
+                        rs.getString("nom"),
+                        rs.getDate("date_peremption"));
                 vide = false;
             }
             if (vide) System.out.println("Aucune alerte pour le moment.");
@@ -135,14 +152,14 @@ public class ValaisonJDBC {
 
     // Clôturer une commande
     private static void cloturerCommande(Scanner scanner) {
-        System.out.print("Entrez l’ID de la commande à clôturer : ");
+        System.out.print("Entrez l'ID de la commande à clôturer : ");
         int id = scanner.nextInt();
         String sql = "UPDATE commandes SET statut = 'TERMINEE' WHERE id = ?";
         try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
             pstmt.setInt(1, id);
             int n = pstmt.executeUpdate();
-            if (n > 0) System.out.println(" Commande clôturée avec succès !");
-            else System.out.println(" Commande introuvable.");
+            if (n > 0) System.out.println("Commande clôturée avec succès !");
+            else System.out.println("Commande introuvable.");
         } catch (SQLException e) {
             System.err.println("Erreur lors de la clôture : " + e.getMessage());
         }
